2004-09-27  Zoltan Varga  <vargaz@freemail.hu>

	* Array.cs: Add stub for AsReadOnly<T>.
	
2004-09-25  Zoltan Varga  <vargaz@freemail.hu>

	* Type.cs: Add MakePointerType && stub for ReflectionOnlyGetType.

	* MonoCustomAttrs.cs (GetCustomAttributesBase): Add support for
	parameters.

2004-09-24  Zoltan Varga  <vargaz@freemail.hu>

	* MonoCustomAttrs.cs (GetCustomAttributesBase): Add support for
	methods and fields.
	
	* MonoCustomAttrs.cs: Beginnings of support for returning 2.0 pseudo
	custom attributes.

	* MonoCustomAttrs.cs (RetrieveAttributeUsage): Avoid infinite recursion.

	* MonoCustomAttrs.cs (GetCustomAttributes): Fix the 'attributeType is 
	sealed' optimization.

	* Type.cs: Implement 2.0 StructLayoutAttribute property. 

	* Type.cs Add GetPseudoCustomAttributes () method.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* Type.cs (Type.GetGenericParameterConstraints): New public method.

2004-09-23  Zoltan Varga  <vargaz@freemail.hu>

	* MonoCustomAttrs.cs (GetCustomAttributes): Rename the icall to
	GetCustomAttributesInternal and add a 'pseudoAttrs' argument.

	* Type.cs: Tweak Module property in 2.0 build.

2004-09-23  Martin Baulig  <martin@ximian.com>

	* Type.cs (Type.GenericParameterAttributes): New public property.

2004-09-23  Martin Baulig  <martin@ximian.com>

	* GenericParameterAttributes.cs: New file.

2004-09-22  Zoltan Varga  <vargaz@freemail.hu>

	* ModuleHandle.cs: Updated after changes to Module class.

2004-09-21  Geoff Norton <gnorton@customerdna.com>

	* Type.cs: BindingFlags.IgnoreCase was being ignored, this reimplements
	this filter. Fixes bug #65778.

2004-09-20  Zoltan Varga  <vargaz@freemail.hu>

	* Environment.cs: Bump corlib version.

2004-09-19  Zoltan Varga  <vargaz@freemail.hu>

	* ModuleHandle.cs: New file.

	* RuntimeFieldHandle.cs: Add an internal ctor.

2004-09-19  Dick Porter  <dick@ximian.com>

	* Console.cs: Use the internal wrappers for StreamReader and
	StreamWriter that catch IOException.
