@@ -2788,12 +2788,7 @@ namespace System {
 				else if (conversionType == conversionTable[18]) // 18 TypeCode.String
 					return (object) convertValue.ToString (provider);
 				else {
-					try {
-						return (object) convertValue;
-					}
-					catch {
-						throw new ArgumentException (Locale.GetText ("Unknown target conversion type"));
-					}
+					throw new ArgumentException (Locale.GetText ("Unknown target conversion type"));
 				}
 			} else
 				// Not in the conversion table
