@@ -1,3 +1,8 @@
+2004-09-23  Martin Garton  <martin@wrasse.demon.co.uk>
+
+	* ConvertTest.cs: Ensure ToType() fails with an ArgumentException in
+	a case where is cannot convert.
+
 2004-09-24  Zoltan Varga  <vargaz@freemail.hu>
 
 	* TypeTest.cs: Add test for StructLayoutAttribute.
