@@ -1,3 +1,8 @@
+2004-09-23  Martin Garton  <martin@wrasse.demon.co.uk>
+
+	* Convert.cs: ToType was returning unconverted object when it should
+	fail with an ArgumentException.
+
 2004-09-27  Zoltan Varga  <vargaz@freemail.hu>
 
 	* Array.cs: Add stub for AsReadOnly<T>.
